css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.fa-solid {
    color: var(--main-color);
}

body {
    display: flex;
    margin: 0;
    justify-content: center;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    min-width: 320px;
    padding: 0 50px;
    box-sizing: border-box;
}

a {
    color: inherit;
    text-decoration: none;
}

.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

/****** Header ******/
header{
    display: flex;
    justify-content: space-between;
}

header .header-logo img{
    padding: 30px;
    padding-left: 0;
    width: 61px;
}

header .header-right{
    display: flex;
}

header .header-right a{
    margin-left: 68px;
    padding: 15px 0;
}

header .header-right a:hover{
    border-top: 2px solid var(--main-color);
    color: var(--main-color);
    padding-top: 13px;
}

/****** Search form ******/
h1{
    font-size: 22px;
    margin-bottom: 7px;
}

.recherche-subtitle p{
    margin: 0;
}

.search-form .desktop{
    width: 377px;
}

.search-form .desktop,
.search-form .mobile{
    height: 49px;
    display: flex;
    align-items: center;
    margin: 30px 0 25px 0;
}

.search-form .desktop i,
.search-form .mobile i{
    width: 70px;
    height: 100%;
    border-start-start-radius: 15px;
    border-end-start-radius: 15px;
    background-color: var(--main-bg-color);
    font-size: 17px;
    color: black;
    display: flex;
    align-items: center;
    justify-content: center;
}

.search-form .desktop input{
    width: 195px;
}

.search-form .desktop input,
.search-form .mobile input{
    height: 100%;
    box-sizing: border-box;
    padding-left: 20px;
    border: 1px solid var(--main-bg-color);
    border-right: none;
    font-weight: 700;
    font-size: 18px;
}

.search-form .desktop input::placeholder,
.search-form .mobile input::placeholder{
    color: black;
    opacity: 1;
}

.search-form .desktop input[type="submit"]{
    height: 100%;
    width: 132px;
    border: none;
    padding-left: 5px;
    border-start-end-radius: 15px;
    border-end-end-radius: 15px;
    background-color: var(--main-color);
    color: white;
    font-weight: 700;
}

.search-form .mobile{
    width: 104%;
    max-width: 391px;
    min-width: 320px;
}

.search-form .mobile input{
    width: 100%;
}

.search-form .mobile button[type="submit"]{
    height: 100%;
    position: relative;
    right: 14px;
    padding: 0;
    border: none;
    background-color: transparent;
    outline: none;
    filter: drop-shadow(0px 4px 1px rgba(0, 0, 0, 0.2));
}

.search-form .mobile button i{
    height: 100%;
    width: 49px;
    box-sizing: border-box;
    border-start-end-radius: 15px;
    border-end-end-radius: 15px;
    background-color: var(--main-color);
    color: white;
}

/****** Search filters ******/
#filters{
    display: flex;
    flex-wrap: wrap;
    align-items: center;
}

#filters h2{
    font-size: 17px;
    margin-right: 13px;
}

#filters .filters-buttons,
#filters .filters-rows{
    display: flex;
}

#filters button i{
    font-size: 20px;
    margin-right: 10px;
}

#filters button{
    margin: 8px 8px 8px 0;
    padding: 12px 18px;
    border-radius: 25px;
    border: 2px solid #D9D9D9;
    background-color: white;
    text-align: center;
    font-weight: 700;
    font-size: 17px;
}

#filters button:hover{
    background-color: var(--filter-bg-color);
}

#filters .tooltip i{
    min-width: 26px;
    display: flex;
    align-items: center;
    justify-content: center;
    border: 1px solid #D9D9D9;
    border-radius: 50px;
    margin-right: 10px;
    width: 24px;
    height: 24px;
    font-size: 11px;
}

#filters .tooltip{
    margin-bottom: 35px;
    flex-basis: 100%;
    margin-top: 30px;
    display: flex;
    align-items: center;
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

/****** Hebergements ***********/
.hebergements {
    width: 65%;
}

.hebergements-title{
    margin-bottom: 33px;
}

.hebergements-cards{
    display: flex;
    flex-direction: column;
    gap: 33px;
}

.hebergements-rows{
    display: flex;
    gap: 33px;
}

.hebergements-rows a{
    flex: 1 1 0;
    min-width: 0;
    gap: 33px;
}

.hebergements-rows .card{
    height: 100%;
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
}

.hebergements-rows img{
    height: 124px;
    border-start-start-radius: 15px;
    border-start-end-radius: 15px;
}

.hebergements-rows .card-content{
    display: flex;
    flex-grow: 1;
    flex-direction: column;
    padding-left: 15px;
    justify-content: space-between;
}

.hebergements-rows .card-title{
    margin-top: 10px;
    margin-bottom: 4px;
}

.hebergements-rows .card-subtitle{
    margin: 0;
}

.hebergements-rows .card-rating{
    margin-bottom: 5px;
}

.hebergements h4{
    margin: 50px 0 0 0;
    display: inline-block;
}

/****** Populaires ***********/
.populaires {
    width: 32%;
}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

/****** Activités ***********/
.activites{
    margin: 30px;
}

.activites-title{
    margin: 23px 0;
    padding-top: 20px;
}

.activites-cards a{
    width: 23%;
    height: 100%;
}

.activites-cards{
    display: flex;
    gap: 15px;
    flex-wrap: wrap;
    justify-content: space-between;
}

.activites-cards .card{
    padding: 0;
    height: 100%;
    display: flex;
    flex-direction: column;
}

.activites-cards img{
    height: 380px;
    border-start-start-radius: 15px;
    border-start-end-radius: 15px;
}

.activites-cards .card-content{
    display: flex;
    flex-direction: row;
    align-items: center;
    padding-left: 15px;
    height: 59px;
}

.activites-cards .card-title{
    margin-top: 10px;
    margin-bottom: 5px;
}

/****** Footer ***********/
footer{
    width: 100%;
    max-width: 1440px;
    margin-top: 50px;
    padding: 0 20px;
    box-sizing: border-box;
    background-color: var(--main-bg-color);
}

.footer-container{
    display: flex;
    flex-wrap: wrap;
    gap: 15px;
    justify-content: space-between;
}

.footer-sections{
    flex-grow: 1;
}

.footer-title h4{
    margin-bottom: 0px;
}

.footer-content ul{
    padding-left: 0;
    margin-top: 0;
}

.footer-content li{
    margin-top: 10px;
    list-style-type: none;
}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media (max-width: 1024px) {
    #filters{
        flex-direction: column;
        align-items: flex-start;
    }

    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .hebergements-cards .card-title{
        font-size: 14px;
    }
    
    .hebergements-cards .card-subtitle{
        font-size: 13px;
    }

    .hebergements-cards .card-rating{
        margin-top: 3px;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards a {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }

    .activites-cards img{
        height: 200px;
    }

    .activites-cards .card-content{
        height: 70px;
    }
}

@media (width >= 768px){
    .search-form .mobile{
        display: none;
    }
}

/* Small devices (phones, less than 768px) */
@media (width < 768px) {
    .search-form .desktop{
        display: none;
    }

    .main-container{
        padding: 0;
    }

    .card{
        filter: drop-shadow(0px 3px 5px rgba(0, 0, 0, 0.1));
    }

    header{
        flex-direction: column;
        align-items: center;
    }

    header .header-logo img{
        padding: 30px;
        padding-bottom: 10px;
    }

    header .header-right{
        width: 100%;
    }

    header .header-right a{
        padding: 13px 0;
        margin: 0;
        display: flex;
        justify-content: center;
        flex: 1 1 0;
        border-bottom: 2px solid var(--main-bg-color);
    }

    header .header-right a:hover{
        border-top: none;
        border-bottom: 2px solid var(--main-color);
        padding-bottom: 13px;
        color: var(--main-color);
    }

    .recherche{
        margin-top: 33px;
        padding: 0 20px;
    }

    #filters h2{
        font-size: 18px;
    }

    #filters .filters-buttons{
        width: 100%;
        max-width: 376px;
        min-width: 308px;
        flex-direction: column;
        gap: 20px;
    }

    #filters .filters-rows{
        gap: 10px;
    }

    #filters button i{
        font-size: 15px;
    }

    #filters button{
        margin: 0;
        font-size: 14px;
        display: flex;
        flex: 1 1 0;
    }

    #filters .tooltip{
        margin-bottom: 0;
    }

    .hebergements-and-populaires section {
        border-radius: 0;
        padding: 20px;
    }
    
    .hebergements-and-populaires section[class="hebergements"]{
        background-color: white;
    }

    .hebergements-and-populaires{
        display: flex;
        flex-direction: column-reverse;
    }

    .populaires{
        margin: 33px 0 15px 0;
    }

    .populaires-title{
        margin-bottom: 10px;
    }

    .populaires-cards{
        display: flex;
        flex-direction: column;
    }

    .populaires-cards a{
        width: 100%;
    }

    .populaires-cards .card{
        margin: 7px 0;
    }

    .hebergements-title{
        margin-bottom: 15px;
    }

    .hebergements-cards{
        gap: 15px
    }

    .hebergements-rows{
        display: flex;
        flex-direction: column;
        gap: 15px;
    }
    
    .hebergements h4{
        margin-top: 20px;
        font-size: 18px;
    }

    .activites{
        margin: 25px;
    }

    .activites-cards{
        flex-wrap: nowrap;
        flex-direction: column;
    }

    .activites-cards a{
        width: 100%;
    }

    .activites-cards img{
        height: 141px
    }

    footer{
        margin-top: 65px;
        padding: 10px 25px;
    }

    .footer-container{
        display: flex;
        flex-direction: column;
    }
}

